--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -5,10 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./css/1-timer.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <input type="text" id="datetime-picker" />
-  <button class="js-start-button" type="button" data-start>Start</button>
+  <input type="text" id="datetime-picker" class="datetime-picker" />
+  <button class="js-start-button start-button" type="button" data-start>
+    Start
+  </button>
 
   <div class="timer">
     <div class="field">
