--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -5,9 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./css/2-snackbar.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+  <form class="form js-form">
+    <label>
+      Delay (ms)
+      <input 
+        class="input-number" 
+        type="number" 
+        name="delay" 
+        step="100" 
+        required 
+      />
+    </label>
+
+    <fieldset>
+      <legend>State</legend>
+      <label>
+        <input type="radio" name="state" value="fulfilled" required />
+        Fulfilled
+      </label>
+      <label>
+        <input type="radio" name="state" value="rejected" required />
+        Rejected
+      </label>
+    </fieldset>
+
+    <button class="js-button button" type="submit">Create notification</button>
+  </form>
+
   
-  <script src="./js/2-snackbar.js"></script>
+  <script type="module" src="./js/2-snackbar.js"></script>
 </body>
 </html>
