--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/index.css">
   </head>
   <body>
-    <div><a href="./1-timer.html">Timer</a></div>
-    <div><a href="./2-snackbar.html">Snackbar</a></div>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <div class="content">
+      <a class="link" href="./1-timer.html">Timer</a>
+      <a class="link" href="./2-snackbar.html">Snackbar</a>
+    </div>
   </body>
 </html>
