snackbar form fix

--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <form class="form js-form">
+  <form action="submit" class="form js-form">
     <label>
       Delay (ms)
       <input 
